Fix input-text issue on firefox

--- a/app/static/css/train.css
+++ b/app/static/css/train.css
@@ -105,4 +105,5 @@
 
 .corpus-selector-list .dataTables_filter .form-control {
     width: 100%;
+    min-width: 0px;
 }
